--- a/views/index.html
+++ b/views/index.html
@@ -5,6 +5,9 @@
     <title>Caption This</title>
 </head>
 <body>
-<h1>Hey there!</h1>
+<form action = "http://0.0.0.0:5000/uploader" method = "POST" enctype = "multipart/form-data">
+    <input type = "file" name = "file" />
+    <input type = "submit"/>
+</form>
 </body>
 </html>
