--- a/templates/home.html
+++ b/templates/home.html
@@ -23,14 +23,13 @@
 </style>
 
 <body>
-<<<<<<< HEAD
+
 <br><br>
-<div class="container">
+<!-- <div class="container">
 <form action = "http://127.0.0.1:5000/display" method = "POST" enctype = "multipart/form-data">
     <input type = "file" name = "file" />
     <input type = "submit"/>
-</form>
-=======
+</form> -->
 
 <div class="container" id="result">
     <div class="row valign-wrapper">
@@ -43,7 +42,7 @@
                     <p>Upload a photo, let us find you a good caption and hashtags</p>
                 </div>
                 <div class="card-action">
-                    <form action="http://0.0.0.0:5000/display" method = "POST" enctype = "multipart/form-data">
+                    <form action="http://127.0.0.1:5000/display" method = "POST" enctype = "multipart/form-data">
                         <div class="file-field input-field">
                             <div class="btn">
                                 <span>File</span>
@@ -62,7 +61,7 @@
             </div>
         </div>
     </div>
->>>>>>> ac547cdfb6412eebf4f1bb5450d6ff4df661819a
+
 </div>
 
 <!--<form action = "http://0.0.0.0:5000/display" method = "POST" enctype = "multipart/form-data">-->
